A load and mouse click function

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <canvas id="pong" width="720" height="440"></canvas>
+    <h1 id="h1Start"></h1>
     <script src="scripts.js"></script>
 </body>
 </html>
