--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pong</title>
+
+    <style>
+        h1 { display: inline; }
+    </style>
 </head>
 <body>
     <canvas id="pong" width="720" height="440"></canvas>
