--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pong</title>
 
-    <style>
-        h1 { display: inline; }
-    </style>
+    <style> h1 { display: inline; } </style>
 </head>
 <body>
     <canvas id="pong" width="720" height="440"></canvas>
